Add further test for more use cases